// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`epochs Can return aggregated Epoch data 1`] = `
Object {
  "epochs_aggregate": Object {
    "aggregate": Object {
      "count": "165",
      "max": Object {
        "number": 164,
        "output": "2442501261937830000",
        "transactionsCount": "155707",
      },
      "min": Object {
        "output": "0",
        "transactionsCount": "0",
      },
      "sum": Object {
        "output": "7263068702398415000",
        "transactionsCount": "1355491",
      },
    },
  },
}
`;

exports[`epochs Can return aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "activeStake_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": null,
          },
        },
      },
      "blocksCount": "21601",
      "blocks_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fees": 2504.7738530623583,
            "size": 688.95231702236,
          },
          "count": "21601",
          "max": Object {
            "fees": "999999",
            "size": "648087",
          },
          "min": Object {
            "fees": "0",
            "size": "631",
          },
          "sum": Object {
            "fees": "54105620",
            "size": "14882059",
          },
        },
      },
      "fees": 54105620,
      "number": 1,
    },
    Object {
      "activeStake_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": "13539552849947180",
          },
        },
      },
      "blocksCount": "12296",
      "blocks_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fees": 207282.4361581002,
            "size": 585.2256831489915,
          },
          "count": "12296",
          "max": Object {
            "fees": "20175753",
            "size": "57329",
          },
          "min": Object {
            "fees": "0",
            "size": "3",
          },
          "sum": Object {
            "fees": "2548744835",
            "size": "7195935",
          },
        },
      },
      "fees": 2548744835,
      "number": 150,
    },
  ],
}
`;

exports[`epochs Can return filtered aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocks_aggregate": Object {
        "aggregate": Object {
          "count": "3087",
        },
      },
      "fees": 54105620,
      "number": 1,
    },
  ],
}
`;

exports[`epochs Includes protocol params in effect for the epoch 1`] = `
Object {
  "epochs": Array [
    Object {
      "protocolParams": Object {
        "a0": 0.3,
        "coinsPerUtxoSize": 34482,
        "collateralPercent": 150,
        "costModels": Object {
          "PlutusV1": Object {
            "addInteger-cpu-arguments-intercept": 197209,
            "addInteger-cpu-arguments-slope": 0,
            "addInteger-memory-arguments-intercept": 1,
            "addInteger-memory-arguments-slope": 1,
            "appendByteString-cpu-arguments-intercept": 396231,
            "appendByteString-cpu-arguments-slope": 621,
            "appendByteString-memory-arguments-intercept": 0,
            "appendByteString-memory-arguments-slope": 1,
            "appendString-cpu-arguments-intercept": 150000,
            "appendString-cpu-arguments-slope": 1000,
            "appendString-memory-arguments-intercept": 0,
            "appendString-memory-arguments-slope": 1,
            "bData-cpu-arguments": 150000,
            "bData-memory-arguments": 32,
            "blake2b_256-cpu-arguments-intercept": 2477736,
            "blake2b_256-cpu-arguments-slope": 29175,
            "blake2b_256-memory-arguments": 4,
            "cekApplyCost-exBudgetCPU": 29773,
            "cekApplyCost-exBudgetMemory": 100,
            "cekBuiltinCost-exBudgetCPU": 29773,
            "cekBuiltinCost-exBudgetMemory": 100,
            "cekConstCost-exBudgetCPU": 29773,
            "cekConstCost-exBudgetMemory": 100,
            "cekDelayCost-exBudgetCPU": 29773,
            "cekDelayCost-exBudgetMemory": 100,
            "cekForceCost-exBudgetCPU": 29773,
            "cekForceCost-exBudgetMemory": 100,
            "cekLamCost-exBudgetCPU": 29773,
            "cekLamCost-exBudgetMemory": 100,
            "cekStartupCost-exBudgetCPU": 100,
            "cekStartupCost-exBudgetMemory": 100,
            "cekVarCost-exBudgetCPU": 29773,
            "cekVarCost-exBudgetMemory": 100,
            "chooseData-cpu-arguments": 150000,
            "chooseData-memory-arguments": 32,
            "chooseList-cpu-arguments": 150000,
            "chooseList-memory-arguments": 32,
            "chooseUnit-cpu-arguments": 150000,
            "chooseUnit-memory-arguments": 32,
            "consByteString-cpu-arguments-intercept": 150000,
            "consByteString-cpu-arguments-slope": 1000,
            "consByteString-memory-arguments-intercept": 0,
            "consByteString-memory-arguments-slope": 1,
            "constrData-cpu-arguments": 150000,
            "constrData-memory-arguments": 32,
            "decodeUtf8-cpu-arguments-intercept": 150000,
            "decodeUtf8-cpu-arguments-slope": 1000,
            "decodeUtf8-memory-arguments-intercept": 0,
            "decodeUtf8-memory-arguments-slope": 8,
            "divideInteger-cpu-arguments-constant": 148000,
            "divideInteger-cpu-arguments-model-arguments-intercept": 425507,
            "divideInteger-cpu-arguments-model-arguments-slope": 118,
            "divideInteger-memory-arguments-intercept": 0,
            "divideInteger-memory-arguments-minimum": 1,
            "divideInteger-memory-arguments-slope": 1,
            "encodeUtf8-cpu-arguments-intercept": 150000,
            "encodeUtf8-cpu-arguments-slope": 1000,
            "encodeUtf8-memory-arguments-intercept": 0,
            "encodeUtf8-memory-arguments-slope": 8,
            "equalsByteString-cpu-arguments-constant": 150000,
            "equalsByteString-cpu-arguments-intercept": 112536,
            "equalsByteString-cpu-arguments-slope": 247,
            "equalsByteString-memory-arguments": 1,
            "equalsData-cpu-arguments-intercept": 150000,
            "equalsData-cpu-arguments-slope": 10000,
            "equalsData-memory-arguments": 1,
            "equalsInteger-cpu-arguments-intercept": 136542,
            "equalsInteger-cpu-arguments-slope": 1326,
            "equalsInteger-memory-arguments": 1,
            "equalsString-cpu-arguments-constant": 1000,
            "equalsString-cpu-arguments-intercept": 150000,
            "equalsString-cpu-arguments-slope": 1000,
            "equalsString-memory-arguments": 1,
            "fstPair-cpu-arguments": 150000,
            "fstPair-memory-arguments": 32,
            "headList-cpu-arguments": 150000,
            "headList-memory-arguments": 32,
            "iData-cpu-arguments": 150000,
            "iData-memory-arguments": 32,
            "ifThenElse-cpu-arguments": 1,
            "ifThenElse-memory-arguments": 1,
            "indexByteString-cpu-arguments": 150000,
            "indexByteString-memory-arguments": 1,
            "lengthOfByteString-cpu-arguments": 150000,
            "lengthOfByteString-memory-arguments": 4,
            "lessThanByteString-cpu-arguments-intercept": 103599,
            "lessThanByteString-cpu-arguments-slope": 248,
            "lessThanByteString-memory-arguments": 1,
            "lessThanEqualsByteString-cpu-arguments-intercept": 103599,
            "lessThanEqualsByteString-cpu-arguments-slope": 248,
            "lessThanEqualsByteString-memory-arguments": 1,
            "lessThanEqualsInteger-cpu-arguments-intercept": 145276,
            "lessThanEqualsInteger-cpu-arguments-slope": 1366,
            "lessThanEqualsInteger-memory-arguments": 1,
            "lessThanInteger-cpu-arguments-intercept": 179690,
            "lessThanInteger-cpu-arguments-slope": 497,
            "lessThanInteger-memory-arguments": 1,
            "listData-cpu-arguments": 150000,
            "listData-memory-arguments": 32,
            "mapData-cpu-arguments": 150000,
            "mapData-memory-arguments": 32,
            "mkCons-cpu-arguments": 150000,
            "mkCons-memory-arguments": 32,
            "mkNilData-cpu-arguments": 150000,
            "mkNilData-memory-arguments": 32,
            "mkNilPairData-cpu-arguments": 150000,
            "mkNilPairData-memory-arguments": 32,
            "mkPairData-cpu-arguments": 150000,
            "mkPairData-memory-arguments": 32,
            "modInteger-cpu-arguments-constant": 148000,
            "modInteger-cpu-arguments-model-arguments-intercept": 425507,
            "modInteger-cpu-arguments-model-arguments-slope": 118,
            "modInteger-memory-arguments-intercept": 0,
            "modInteger-memory-arguments-minimum": 1,
            "modInteger-memory-arguments-slope": 1,
            "multiplyInteger-cpu-arguments-intercept": 61516,
            "multiplyInteger-cpu-arguments-slope": 11218,
            "multiplyInteger-memory-arguments-intercept": 0,
            "multiplyInteger-memory-arguments-slope": 1,
            "nullList-cpu-arguments": 150000,
            "nullList-memory-arguments": 32,
            "quotientInteger-cpu-arguments-constant": 148000,
            "quotientInteger-cpu-arguments-model-arguments-intercept": 425507,
            "quotientInteger-cpu-arguments-model-arguments-slope": 118,
            "quotientInteger-memory-arguments-intercept": 0,
            "quotientInteger-memory-arguments-minimum": 1,
            "quotientInteger-memory-arguments-slope": 1,
            "remainderInteger-cpu-arguments-constant": 148000,
            "remainderInteger-cpu-arguments-model-arguments-intercept": 425507,
            "remainderInteger-cpu-arguments-model-arguments-slope": 118,
            "remainderInteger-memory-arguments-intercept": 0,
            "remainderInteger-memory-arguments-minimum": 1,
            "remainderInteger-memory-arguments-slope": 1,
            "sha2_256-cpu-arguments-intercept": 2477736,
            "sha2_256-cpu-arguments-slope": 29175,
            "sha2_256-memory-arguments": 4,
            "sha3_256-cpu-arguments-intercept": 0,
            "sha3_256-cpu-arguments-slope": 82363,
            "sha3_256-memory-arguments": 4,
            "sliceByteString-cpu-arguments-intercept": 150000,
            "sliceByteString-cpu-arguments-slope": 5000,
            "sliceByteString-memory-arguments-intercept": 0,
            "sliceByteString-memory-arguments-slope": 1,
            "sndPair-cpu-arguments": 150000,
            "sndPair-memory-arguments": 32,
            "subtractInteger-cpu-arguments-intercept": 197209,
            "subtractInteger-cpu-arguments-slope": 0,
            "subtractInteger-memory-arguments-intercept": 1,
            "subtractInteger-memory-arguments-slope": 1,
            "tailList-cpu-arguments": 150000,
            "tailList-memory-arguments": 32,
            "trace-cpu-arguments": 150000,
            "trace-memory-arguments": 32,
            "unBData-cpu-arguments": 150000,
            "unBData-memory-arguments": 32,
            "unConstrData-cpu-arguments": 150000,
            "unConstrData-memory-arguments": 32,
            "unIData-cpu-arguments": 150000,
            "unIData-memory-arguments": 32,
            "unListData-cpu-arguments": 150000,
            "unListData-memory-arguments": 32,
            "unMapData-cpu-arguments": 150000,
            "unMapData-memory-arguments": 32,
            "verifyEd25519Signature-cpu-arguments-intercept": 3345831,
            "verifyEd25519Signature-cpu-arguments-slope": 1,
            "verifyEd25519Signature-memory-arguments": 1,
          },
        },
        "decentralisationParam": 0,
        "eMax": 18,
        "extraEntropy": null,
        "keyDeposit": 2000000,
        "maxBlockBodySize": 65536,
        "maxBlockExMem": "50000000",
        "maxBlockExSteps": "40000000000",
        "maxBlockHeaderSize": 1100,
        "maxCollateralInputs": 3,
        "maxTxExMem": "10000000",
        "maxTxExSteps": "10000000000",
        "maxTxSize": 16384,
        "maxValSize": "5000",
        "minFeeA": 44,
        "minFeeB": 155381,
        "minPoolCost": 340000000,
        "minUTxOValue": 34482,
        "nOpt": 500,
        "poolDeposit": 500000000,
        "priceMem": 0.0577,
        "priceStep": 0.0000721,
        "protocolVersion": Object {
          "major": 6,
          "minor": 6,
        },
        "rho": 0.003,
        "tau": 0.2,
      },
    },
  ],
}
`;

exports[`epochs Returns epoch details by number 1`] = `
Object {
  "epochs": Array [
    Object {
      "adaPots": Object {
        "deposits": "408972000000",
        "fees": "1597318688",
        "reserves": "4754924351561317",
        "rewards": "39409192091760",
        "slotNo": 34430432,
        "treasury": "126704323509588",
        "utxo": "40078551563518650",
      },
      "blocksCount": "12296",
      "fees": 2548744835,
      "lastBlockTime": "2021-08-17T20:19:20Z",
      "number": 150,
      "output": "7317482052405635",
      "startedAt": "2021-08-12T20:20:48Z",
      "transactionsCount": "12356",
    },
  ],
}
`;

exports[`epochs Returns epoch details by number range 1`] = `
Object {
  "epochs": Array [
    Object {
      "adaPots": null,
      "blocksCount": "21601",
      "fees": 54105620,
      "lastBlockTime": "2019-08-03T20:19:56Z",
      "number": 1,
      "output": "152336265877919",
      "startedAt": "2019-07-29T20:20:16Z",
      "transactionsCount": "305",
    },
  ],
}
`;
